# SignalPilot

./: Dockerfile.gateway  Dockerfile.notebook  Dockerfile.web  agent-notebooks.md  docker-compose.k8s.yml  docker-compose.local.yml  docker-compose.yml  simulate-notebook-ws-connection.py
benchmark/: .gitignore  Dockerfile.ade-agent  Dockerfile.dbt-agent  ade_tasks.json  derive_gold_dates.py  run_direct.py  run_kb.py
benchmark/ade/: __init__.py  evaluator.py  post_grade.py  runner.py  tasks.py  workdir.py
benchmark/agent/: prompts.py  sdk_runner.py
benchmark/core/: mcp.py  paths.py  workdir.py
benchmark/prompts/: dbt_local_system.md  dbt_verify_subagent.md  kb_generation_system.md  notion_verify_subagent.md  post_grade_review.md  sql_lite_system.md  sql_snowflake_system.md  system_general.md
benchmark/runners/: direct.py  kb_generator.py
benchmark/signalpilot-plugin/: README.md
deploy/k8s/: README.md
docs/: sidebars.ts
signalpilot/gateway/: pyproject.toml
signalpilot/gateway/gateway/: main.py
signalpilot/gateway/gateway/api/: __init__.py  _oauth_state.py  chat_traces.py  github.py  notebook_sessions.py  notion.py  security.py  user_secrets.py  workspace_projects.py
signalpilot/gateway/gateway/api/connections/: _validation.py
signalpilot/gateway/gateway/auth/: jwt_secret.py  notebook_jwt.py  user.py
signalpilot/gateway/gateway/config/: auth.py
signalpilot/gateway/gateway/connectors/: ssh_tunnel.py
signalpilot/gateway/gateway/db/: engine.py  models.py
signalpilot/gateway/gateway/dbt_proxy/: api.py
signalpilot/gateway/gateway/git/: http_server.py  repos.py  sync.py
signalpilot/gateway/gateway/http/middleware/: auth.py
signalpilot/gateway/gateway/mcp/tools/: __init__.py  knowledge.py  notebook.py  notion.py
signalpilot/gateway/gateway/models/: notion.py  workspace.py
signalpilot/gateway/gateway/notebook_proxy/: auth.py  constants.py  proxy.py  routes.py
signalpilot/gateway/gateway/notebooks/: __init__.py  session_service.py
signalpilot/gateway/gateway/notion/: analysis.py  client.py  formatting.py  webhooks.py
signalpilot/gateway/gateway/orchestrator/: __init__.py  kubernetes.py
signalpilot/gateway/gateway/runtime/: mode.py
signalpilot/gateway/gateway/store/: _constants.py  chat_traces.py  crypto.py  github.py  notebook_sessions.py  notion.py  settings.py  store.py
signalpilot/gateway/tests/: test_byok_aws.py  test_byok_hardening.py  test_chat_traces.py  test_clone_url_host_header.py  test_connection_validation_ssh.py  test_cors.py  test_dbt_proxy_api.py  test_dbt_proxy_org_scoping.py  test_fernet_rotation.py  test_github_oauth_state.py  test_k8s_orchestrator_namespaces.py  test_notebook_jwt.py  test_notebook_proxy.py  test_notebook_security_fixes.py  test_notebook_sessions.py  test_notion_analysis.py  test_notion_block_cap.py  test_notion_notebook_session_service.py  test_notion_oauth.py  test_pod_security_context.py  test_security_fixes.py  test_ssh_tunnel_hardening.py  test_user_secrets_api_rotation.py
(+154 files in other folders)
